src/main/java/com/gearsofcode/nail/parser/NAILParser.java
// Generated from NAIL.g4 by ANTLR 4.5.1

package com.gearsofcode.nail.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NAILParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, FUNCTION=33, OPERATOR=34, ON_FIELD=35, STRINGLITERAL=36, ESC=37, 
		INTEGER=38, DIGIT=39, ID=40, REPOSITORY_FUNCTION=41, WS=42;
	public static final int
		RULE_prog = 0, RULE_import_declaration = 1, RULE_entity_declaration = 2, 
		RULE_rules_declaration = 3, RULE_rule_declaration = 4, RULE_defined = 5, 
		RULE_constraints = 6, RULE_constraint = 7, RULE_assert_true = 8, RULE_assert_false = 9, 
		RULE_boolean_expr = 10, RULE_variable = 11, RULE_unique = 12, RULE_matches = 13, 
		RULE_required = 14, RULE_max_value = 15, RULE_max_length = 16, RULE_integer_digits = 17, 
		RULE_decimal_digits = 18, RULE_validation_declaration = 19, RULE_validate_on_insert = 20, 
		RULE_validate_on_update = 21, RULE_validate_on_delete = 22;
	public static final String[] ruleNames = {
		"prog", "import_declaration", "entity_declaration", "rules_declaration", 
		"rule_declaration", "defined", "constraints", "constraint", "assert_true", 
		"assert_false", "boolean_expr", "variable", "unique", "matches", "required", 
		"max_value", "max_length", "integer_digits", "decimal_digits", "validation_declaration", 
		"validate_on_insert", "validate_on_update", "validate_on_delete"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'IMPORT'", "'.wemf'", "'ENTITY'", "'RULES-SECTION'", "'END-RULES-SECTION'", 
		"'RULE'", "'UPDATE-RULE'", "'DELETE-RULE'", "','", "'ON ERROR'", "'DEFINED AS'", 
		"'CONSTRAINTS'", "'END-CONSTRAINTS'", "'ASSERT-TRUE'", "'ASSERT-FALSE'", 
		"'NOT'", "'('", "')'", "'.'", "'UNIQUE'", "'MATCHES'", "'REQUIRED'", "'MAX-VALUE'", 
		"'MAX-LENGTH'", "'INTEGER-DIGITS'", "'DECIMAL-DIGITS'", "'VALIDATE-ON-INSERT'", 
		"'END-VALIDATE-ON-INSERT'", "'VALIDATE-ON-UPDATE'", "'END-VALIDATE-ON-UPDATE'", 
		"'VALIDATE-ON-DELETE'", "'END-VALIDATE-ON-DELETE'", null, null, null, 
		null, "'\\\\'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "FUNCTION", "OPERATOR", 
		"ON_FIELD", "STRINGLITERAL", "ESC", "INTEGER", "DIGIT", "ID", "REPOSITORY_FUNCTION", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NAIL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NAILParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public Import_declarationContext import_declaration() {
			return getRuleContext(Import_declarationContext.class,0);
		}
		public Entity_declarationContext entity_declaration() {
			return getRuleContext(Entity_declarationContext.class,0);
		}
		public Rules_declarationContext rules_declaration() {
			return getRuleContext(Rules_declarationContext.class,0);
		}
		public Validation_declarationContext validation_declaration() {
			return getRuleContext(Validation_declarationContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			import_declaration();
			setState(47);
			entity_declaration();
			setState(48);
			rules_declaration();
			setState(49);
			validation_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NAILParser.ID, 0); }
		public Import_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterImport_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitImport_declaration(this);
		}
	}

	public final Import_declarationContext import_declaration() throws RecognitionException {
		Import_declarationContext _localctx = new Import_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__0);
			setState(52);
			match(ID);
			setState(53);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Entity_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NAILParser.ID, 0); }
		public Entity_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterEntity_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitEntity_declaration(this);
		}
	}

	public final Entity_declarationContext entity_declaration() throws RecognitionException {
		Entity_declarationContext _localctx = new Entity_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entity_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(T__2);
			setState(56);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rules_declarationContext extends ParserRuleContext {
		public List<Rule_declarationContext> rule_declaration() {
			return getRuleContexts(Rule_declarationContext.class);
		}
		public Rule_declarationContext rule_declaration(int i) {
			return getRuleContext(Rule_declarationContext.class,i);
		}
		public Rules_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterRules_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitRules_declaration(this);
		}
	}

	public final Rules_declarationContext rules_declaration() throws RecognitionException {
		Rules_declarationContext _localctx = new Rules_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rules_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__3);
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				rule_declaration();
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7))) != 0) );
			setState(64);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NAILParser.ID, 0); }
		public TerminalNode ON_FIELD() { return getToken(NAILParser.ON_FIELD, 0); }
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public TerminalNode STRINGLITERAL() { return getToken(NAILParser.STRINGLITERAL, 0); }
		public DefinedContext defined() {
			return getRuleContext(DefinedContext.class,0);
		}
		public ConstraintsContext constraints() {
			return getRuleContext(ConstraintsContext.class,0);
		}
		public Rule_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterRule_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitRule_declaration(this);
		}
	}

	public final Rule_declarationContext rule_declaration() throws RecognitionException {
		Rule_declarationContext _localctx = new Rule_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rule_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(67);
			match(ID);
			setState(68);
			match(ON_FIELD);
			setState(69);
			variable();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(70);
				match(T__8);
				setState(71);
				variable();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(T__9);
			setState(78);
			match(STRINGLITERAL);
			setState(80);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(79);
				defined();
				}
			}

			setState(83);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(82);
				constraints();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinedContext extends ParserRuleContext {
		public TerminalNode STRINGLITERAL() { return getToken(NAILParser.STRINGLITERAL, 0); }
		public DefinedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defined; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterDefined(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitDefined(this);
		}
	}

	public final DefinedContext defined() throws RecognitionException {
		DefinedContext _localctx = new DefinedContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defined);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__10);
			setState(86);
			match(STRINGLITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintsContext extends ParserRuleContext {
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public ConstraintsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraints; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterConstraints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitConstraints(this);
		}
	}

	public final ConstraintsContext constraints() throws RecognitionException {
		ConstraintsContext _localctx = new ConstraintsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constraints);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__11);
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				constraint();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25))) != 0) );
			setState(94);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintContext extends ParserRuleContext {
		public RequiredContext required() {
			return getRuleContext(RequiredContext.class,0);
		}
		public UniqueContext unique() {
			return getRuleContext(UniqueContext.class,0);
		}
		public MatchesContext matches() {
			return getRuleContext(MatchesContext.class,0);
		}
		public Max_valueContext max_value() {
			return getRuleContext(Max_valueContext.class,0);
		}
		public Max_lengthContext max_length() {
			return getRuleContext(Max_lengthContext.class,0);
		}
		public Assert_trueContext assert_true() {
			return getRuleContext(Assert_trueContext.class,0);
		}
		public Assert_falseContext assert_false() {
			return getRuleContext(Assert_falseContext.class,0);
		}
		public Integer_digitsContext integer_digits() {
			return getRuleContext(Integer_digitsContext.class,0);
		}
		public Decimal_digitsContext decimal_digits() {
			return getRuleContext(Decimal_digitsContext.class,0);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitConstraint(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constraint);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case T__21:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				required();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				unique();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				matches();
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				max_value();
				}
				break;
			case T__23:
				enterOuterAlt(_localctx, 5);
				{
				setState(100);
				max_length();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 6);
				{
				setState(101);
				assert_true();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 7);
				{
				setState(102);
				assert_false();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 8);
				{
				setState(103);
				integer_digits();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 9);
				{
				setState(104);
				decimal_digits();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assert_trueContext extends ParserRuleContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public Assert_trueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assert_true; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterAssert_true(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitAssert_true(this);
		}
	}

	public final Assert_trueContext assert_true() throws RecognitionException {
		Assert_trueContext _localctx = new Assert_trueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assert_true);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__13);
			setState(108);
			boolean_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assert_falseContext extends ParserRuleContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public Assert_falseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assert_false; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterAssert_false(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitAssert_false(this);
		}
	}

	public final Assert_falseContext assert_false() throws RecognitionException {
		Assert_falseContext _localctx = new Assert_falseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assert_false);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__14);
			setState(111);
			boolean_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Boolean_exprContext extends ParserRuleContext {
		public Boolean_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_expr; }
	 
		public Boolean_exprContext() { }
		public void copyFrom(Boolean_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RepositoryFunctionContext extends Boolean_exprContext {
		public TerminalNode REPOSITORY_FUNCTION() { return getToken(NAILParser.REPOSITORY_FUNCTION, 0); }
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public RepositoryFunctionContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterRepositoryFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitRepositoryFunction(this);
		}
	}
	public static class FunctionExpressionContext extends Boolean_exprContext {
		public TerminalNode FUNCTION() { return getToken(NAILParser.FUNCTION, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public FunctionExpressionContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterFunctionExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitFunctionExpression(this);
		}
	}
	public static class NegationContext extends Boolean_exprContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public NegationContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterNegation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitNegation(this);
		}
	}
	public static class BinaryExpressionContext extends Boolean_exprContext {
		public List<Boolean_exprContext> boolean_expr() {
			return getRuleContexts(Boolean_exprContext.class);
		}
		public Boolean_exprContext boolean_expr(int i) {
			return getRuleContext(Boolean_exprContext.class,i);
		}
		public TerminalNode OPERATOR() { return getToken(NAILParser.OPERATOR, 0); }
		public BinaryExpressionContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterBinaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitBinaryExpression(this);
		}
	}
	public static class ValueExpressionContext extends Boolean_exprContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode STRINGLITERAL() { return getToken(NAILParser.STRINGLITERAL, 0); }
		public TerminalNode INTEGER() { return getToken(NAILParser.INTEGER, 0); }
		public ValueExpressionContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterValueExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitValueExpression(this);
		}
	}
	public static class GroupExpressionContext extends Boolean_exprContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public GroupExpressionContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterGroupExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitGroupExpression(this);
		}
	}

	public final Boolean_exprContext boolean_expr() throws RecognitionException {
		return boolean_expr(0);
	}

	private Boolean_exprContext boolean_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Boolean_exprContext _localctx = new Boolean_exprContext(_ctx, _parentState);
		Boolean_exprContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_boolean_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			switch (_input.LA(1)) {
			case T__15:
				{
				_localctx = new NegationContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(114);
				match(T__15);
				setState(115);
				boolean_expr(6);
				}
				break;
			case STRINGLITERAL:
			case INTEGER:
			case ID:
				{
				_localctx = new ValueExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(119);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(116);
					variable();
					}
					break;
				case STRINGLITERAL:
					{
					setState(117);
					match(STRINGLITERAL);
					}
					break;
				case INTEGER:
					{
					setState(118);
					match(INTEGER);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case REPOSITORY_FUNCTION:
				{
				_localctx = new RepositoryFunctionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(121);
				match(REPOSITORY_FUNCTION);
				setState(122);
				match(T__16);
				setState(123);
				variable();
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(124);
					match(T__8);
					setState(125);
					variable();
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(131);
				match(T__17);
				}
				break;
			case FUNCTION:
				{
				_localctx = new FunctionExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(133);
				match(FUNCTION);
				setState(134);
				match(T__16);
				setState(135);
				variable();
				setState(136);
				match(T__17);
				}
				break;
			case T__16:
				{
				_localctx = new GroupExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(138);
				match(T__16);
				setState(139);
				boolean_expr(0);
				setState(140);
				match(T__17);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BinaryExpressionContext(new Boolean_exprContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_boolean_expr);
					setState(144);
					if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
					setState(145);
					match(OPERATOR);
					setState(146);
					boolean_expr(6);
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(NAILParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(NAILParser.ID, i);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NAILListener ) ((NAILListener)listener).exitVariable(this);
		}
	}
